Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION: column wrap--height/column count (responsive)

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2419,8 +2419,8 @@ and also iPads specifically.
 	column-count: 2;
 	}
 	ol.flow-manyislandgroups {
-	height: 3500px;
-	column-count: 2;
+	height: 4500px;
+	column-count: 3;
 	}
 
 }
@@ -2566,50 +2566,7 @@ and also iPads specifically.
 		content: '⇡';
 	}
 }
-/*@media screen and (min-width: 68.5333333em) {
-	.card-columns {
-		-webkit-column-count: 2;
-		-moz-column-count: 2;
-		column-count: 2;
-		-webkit-column-gap: .35rem;
-		-moz-column-gap: .35rem;
-		column-gap: .35rem;
-		orphans: 1;
-		widows: 1;
-		column-span: all;
-		margin-right: 0px;
-		margin-left: 4px;
-	}
-	.one-column {
-		column-count: 1;
-		column-gap: 0;
-		widows: 1;
-		orphans: 1;
-		column-span: all;
-		margin-left: 4px;
-	}
-}*/
-/*@media screen and (max-width: 55.1875em) {*/
-/*	.cbp-spmenu-horizontal {
-		font-size: 75%;
-		height: 90px;
-	}*/
-/*	.containFlex2 {
-		column-count: 1;
-	}
-	.containFlex4 {
-		column-count: 1;
-	}*/
-/*}*/
-/*@media screen and (max-height: 26.375em) {
-	.cbp-spmenu-vertical {
-		font-size: 90%;
-		width: 190px;
-	}
-	.cbp-spmenu-right {
-		right: -190px;
-	}
-}*/
+
 @media(min-width:768px) {
 	.footer-col-4-md {
 		margin: 0 auto;
@@ -2625,27 +2582,6 @@ and also iPads specifically.
 	}
 }
 @media(min-width:576px) {
-/*	.card-columns {
-		-webkit-column-count: 2;
-		-moz-column-count: 2;
-		column-count: 2;
-		-webkit-column-gap: .35rem;
-		-moz-column-gap: .35rem;
-		column-gap: .35rem;
-		orphans: 1;
-		widows: 1;
-		column-span: all;
-		margin-right: 0px;
-		margin-left: 4px;
-	}
-	.one-column {
-		column-count: 1;
-		column-gap: 0;
-		widows: 1;
-		orphans: 1;
-		column-span: all;
-		margin-left: 4px;
-	}*/
 	.card-body h5 {
 		margin-top: -0.25rem;
 	}
@@ -2672,22 +2608,6 @@ and also iPads specifically.
 		max-width: 1600px;
 	}
 }
-
-/*@media screen and (min-width:576px) {
-	.card-columns {
-		-webkit-column-count: 2;
-		-moz-column-count: 2;
-		column-count: 2;
-		-webkit-column-gap: .35rem;
-		-moz-column-gap: .35rem;
-		column-gap: .35rem;
-		orphans: 1;
-		widows: 1;
-		column-span: all;
-		margin-right: 0px;
-		margin-left: 4px;
-	}
-}*/
 
 /* styles below are media queries for the named groups page*/
 @media screen and (min-width: 1501px) {
